--- a/.github/workflows/build-init-project-typescript.yml
+++ b/.github/workflows/build-init-project-typescript.yml
@@ -40,6 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          npm ci
           npm run build
 
       - name: Test
@@ -47,4 +48,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          npm ci
           npm run test
